final touches made to game and css styling complete

--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Trivia Game</title>
 
-
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Bangers&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
+    <img class="backer-photo" src=http://wallpapercave.com/wp/6cbPLRK.jpg>
         <div id="container">
             <div id="start">Start Quiz!</div>
             <div id="quiz" style="display: none">
